// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoteAccessForm /> should display a spinner and disable save button while sending request 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Remote Access
    </h2>
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable Remote Access
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Accessible via WAN
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Devices in the WAN network will be able to connect to the configuration interface. Otherwise, only devices on LAN will be able to access it.
          </small>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            type="number"
            value="1808"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          A port which will be opened for the remote configuration of this device.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          data-testid="save-settings-button"
          disabled=""
          type="submit"
        >
          <span
            aria-hidden="true"
            class="spinner-border spinner-border-sm mr-1"
            role="status"
          />
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RemoteAccessForm /> should expose the rest of the form when enabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Remote Access
    </h2>
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable Remote Access
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="3"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="3"
          >
            Accessible via WAN
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Devices in the WAN network will be able to connect to the configuration interface. Otherwise, only devices on LAN will be able to access it.
          </small>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            type="number"
            value="1194"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          A port which will be opened for the remote configuration of this device.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          data-testid="save-settings-button"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RemoteAccessForm /> should render full form when access is enabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Remote Access
    </h2>
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable Remote Access
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch"
        >
          <input
            class="custom-control-input"
            id="2"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="2"
          >
            Accessible via WAN
          </label>
          <small
            class="form-text text-muted mt-0 mb-3"
          >
            Devices in the WAN network will be able to connect to the configuration interface. Otherwise, only devices on LAN will be able to access it.
          </small>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            type="number"
            value="1808"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          A port which will be opened for the remote configuration of this device.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          data-testid="save-settings-button"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RemoteAccessForm /> should render only checkbox when access is disabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Remote Access
    </h2>
    <form>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable Remote Access
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          data-testid="save-settings-button"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
